--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -35,6 +35,11 @@
   padding: 0 5.6rem;
   height: 6rem;
   width: calc(100% - 21rem);
+  transform: scaleX(0);
+  transform-origin: right;
+  transition-property: transform;
+  transition-duration: .3s;
+  transition-timing-function: ease-out;
   text-transform: uppercase;
   font: inherit;
   font-size: 2.4rem;
