--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,7 +93,11 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
-
+  transition-property: transform, opacity;
+  transition-duration: .4s;
+  transition-timing-function: ease-in;
+  opacity: 0;
+  transform: translateY(2.5vh);
   @media (min-width: $stop-scaling) {
     width: 509px;
     font-size: 24px;
