--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,7 +241,9 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
-
+    transition-property: color;
+    transition-duration: .25s;
+    transition-timing-function: ease;
     &::after {
       content: "";
       position: absolute;
@@ -249,9 +251,12 @@
       width: 100%;
       height: 2px;
       background-color: $c-light;
-      display: none;
       left: 0;
-
+      transform: scale(0);
+      transform-origin: right;
+      transition-property: transform, background-color;
+      transition-duration: .4s;
+      transition-timing-function: ease;
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
         right: 0;
@@ -267,18 +272,19 @@
 
     &.active {
       &::after {
-        display: block;
+        transform: scale(1);
       }
     }
-
-    &:hover,
-    &:focus {
-      color: $c-purple;
-      outline: none;
-
-      &::after {
-        opacity: 1;
-        background-color: $c-purple;
+    &:not(.active) {
+      &:hover,
+      &:focus {
+        color: $c-purple;
+        outline: none;
+        &::after {
+          transform-origin: left;
+          transform: scale(1);
+          background-color: $c-purple;
+        }
       }
     }
   }
