--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -10,6 +10,44 @@
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(var(--vh, 1vh) * 100);
     }
+    @media( min-width: $mobile ) {
+      .slider__item-text {
+        opacity: 0;
+        transition-property: opacity;
+        transition-timing-function: ease;
+        transition-duration: .5s;
+        transform: translateX(20%);
+      }
+      .swiper-slide-active, .swiper-slide-next {
+        .slider__item-text {
+          opacity: 1;
+          transform: none;
+          transition-duration: .6s;
+          transition-delay: .4s;
+        }
+      }
+      .swiper-slide-next {
+        .slider__item-text {
+          transition-property: transform, opacity;
+          transition-delay: .6s;
+        }
+      }
+    }
+    @media( max-width: $mobile ) {
+      .slider__item-text {
+        opacity: 0;
+        transition-property: opacity;
+        transition-timing-function: ease;
+        transition-duration: .5s;
+      }
+      .swiper-slide-active {
+        .slider__item-text {
+          opacity: 1;
+          transition-duration: .6s;
+          transition-delay: .4s;
+        }
+      }
+    }
   }
 }
 
@@ -18,7 +56,7 @@
   flex-direction: column;
   padding: 14.6rem 4rem 10rem 9.7rem;
   height: auto;
-
+  overflow: hidden;
   @media (min-width: $stop-scaling) {
     padding: 146px 40px 100px 97px;
   }
