--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -1,6 +1,5 @@
 .social-block {
   position: relative;
-
   &:hover {
     .social-block__list {
       opacity: 1;
@@ -35,6 +34,9 @@
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
+    transition-property: width, height, background-color;
+    transition-duration: .3s;
+    transition-timing-function: ease-out;
   }
 
   svg {
@@ -89,7 +91,9 @@
   margin-top: 1.5rem;
   opacity: 0;
   pointer-events: none;
-
+  transition-property: opacity;
+  transition-duration: .3s;
+  transition-timing-function: ease;
   @media (min-width: $stop-scaling) {
     margin-top: 15px;
   }
@@ -140,12 +144,27 @@
   .social-block--active & {
     opacity: 1;
     pointer-events: auto;
+    transition-duration: .2s;
+    li {
+      opacity: 1;
+      transform: translateY(0);
+      &:nth-child(2) {
+        transition-delay: .2s;
+      }
+      &:nth-child(3) {
+        transition-delay: .4s;
+      }
+    }
   }
 
   li {
     flex: none;
     margin-bottom: 0.5rem;
-
+    opacity: 0;
+    transform: translateY(12px);
+    transition-property: all;
+    transition-duration: .5s;
+    transition-timing-function: ease-out;
     @media (min-width: $stop-scaling) {
       margin-bottom: 5px;
     }
@@ -168,7 +187,9 @@
   color: $c-light;
   border: 2px solid transparent;
   border-radius: 50%;
-
+  transition-property: color;
+  transition-duration: .25s;
+  transition-timing-function: ease;
   @media (min-width: $stop-scaling) {
     width: 40px;
     height: 40px;
