--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -5,7 +5,6 @@
   right: 0;
   padding: 2.7rem 0;
   z-index: 10;
-
   @media (min-width: $stop-scaling) {
     padding: 27px 0;
   }
@@ -36,6 +35,10 @@
   width: 10rem;
   color: $c-light;
 
+  transform: translateX(-30%);
+  opacity: 0;
+  transition-property: transform, opacity;
+  transition-duration: .65s;
   @media (min-width: $stop-scaling) {
     top: -5px;
     padding: 10px 0;
@@ -177,6 +180,10 @@
   font-size: 1.2rem;
   line-height: 1.0418;
   color: $c-light;
+  transition-property: opacity, transform;
+  transition-duration: .2s;
+  opacity: 0;
+  transform: translateY(20%);
 
   @media (min-width: $stop-scaling) {
     font-size: 12px;
@@ -272,7 +279,7 @@
 
     &.active {
       &::after {
-        transform: scale(1);
+        transform: scale(0);
       }
     }
     &:not(.active) {
