--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -365,3 +365,27 @@
 .screen--rules {
   background-color: $c-dark;
 }
+@keyframes screenEffect {
+  0% {
+    transform: translateY(100%);
+  } 
+  100% {
+    transform: translateY(0);
+  }
+}
+.screen__effect {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #5f458c;
+  z-index: 9;
+  transform: translateY(100%);
+  &._active {
+    animation: screenEffect .4s ease;
+    @media (prefers-reduced-motion: reduce) {
+      animation: none;
+    }
+  }
+}
