--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -155,10 +155,18 @@
     font-family: $font-alt;
     font-weight: 400;
     font-size: 2.4rem;
-    background-color: $c-purple;
     border-radius: 50%;
     line-height: 5rem;
     text-align: center;
+
+    color: transparent;
+    background-color: transparent;
+    transform: scale(0);
+
+    transition-property: all, background-color, color;
+    transition-duration: .4s, .35s, .3s;
+    transition-delay: 0s, 0s, .25s;
+    transition-timing-function: cubic-bezier(.44,.31,.42,1.69), ease-out;
 
     @media (max-width: $tablet) and (orientation: portrait) {
       top: 1rem;
@@ -180,6 +188,14 @@
   p {
     margin: 0;
 
+    opacity: 0;
+    transform: translateX(12px);
+
+    transition-property: all;
+    transition-duration: .2s;
+    transition-timing-function: ease-out;
+    transition-delay: .2s;
+
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
     }
@@ -191,23 +207,41 @@
   bottom: 6rem;
   right: 5.6rem;
 
-  @media (min-width: $stop-scaling) {
-    bottom: 60px;
-    right: 56px;
-  }
+  color: transparent;
 
-  @media (max-width: $tablet) and (orientation: portrait) {
-    left: 0;
-    right: 0;
-    bottom: 4rem;
-  }
+  transition-property: color;
+  transition-duration: .25s;
+  transition-timing-function: ease;
+  transition-delay: 1.35s;
+  &::before {
 
-  @media (max-width: $tablet) and (orientation: landscape) {
-    bottom: 5rem;
-  }
+    transition-delay: 1s;
 
-  @media (max-width: $mobile) and (orientation: landscape) {
-    bottom: 2rem;
-    right: 1.5rem;
-  }
+    opacity: 0;
+    width: 32%;
+    left: 100%;
+    transition-property: all;
+    transition-duration: .35s;
+    transition-timing-function: ease-in-out;
+ }
+
+ @media (min-width: $stop-scaling) {
+  bottom: 60px;
+  right: 56px;
+}
+
+@media (max-width: $tablet) and (orientation: portrait) {
+  left: 0;
+  right: 0;
+  bottom: 4rem;
+}
+
+@media (max-width: $tablet) and (orientation: landscape) {
+  bottom: 5rem;
+}
+
+@media (max-width: $mobile) and (orientation: landscape) {
+  bottom: 2rem;
+  right: 1.5rem;
+}
 }
